# polydot

./: Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
docs/: design.md
scripts/smoke/: divergence-fixture.sh
src/: config.rs  config_edit.rs  credentials.rs  error.rs  lib.rs  link.rs  main.rs  paths.rs
src/commands/: bootstrap.rs  commit.rs  init.rs  link.rs  mod.rs  push.rs  repo.rs  save.rs  status.rs  sync.rs
src/git/: mod.rs
src/paths/: ast.rs  eval.rs  parser.rs
src/ui/: line_editor.rs  menu.rs  mod.rs
tests/: status_integration.rs
