[package]
name = "polydot"
version = "1.1.0"
edition = "2024"
authors = ["Mitchell Hogle <mitchellhogle@gmail.com>"]
description = "Git orchestrator for managing N dotfile repos with one command each"
license = "GPL-3.0-or-later"
repository = "https://github.com/mhogle25/polydot"
readme = "README.md"
keywords = ["dotfiles", "git", "symlink", "config"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dirs = "5"
git2 = "0.19"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = "symbols"
